# big-data

./: .gitmodules
lab-1/: .clang-format  .gitignore  CMakeLists.txt  README.md
lab-1/include/TDB/Columns/: IColumn.h
lab-1/include/TDB/Core/: Block.h  Field.h  Types.h
lab-1/src/: CMakeLists.txt  lib.cpp  server.cpp
lab-1/test/: CMakeLists.gtest.txt  CMakeLists.txt  FieldTest.cpp
